Add login functionality

--- a/gp/src/main/resources/templates/users/login.html
+++ b/gp/src/main/resources/templates/users/login.html
@@ -15,7 +15,7 @@
         <input type="password" name = "password" placeholder="Password"><br>
         <button>Login</button>
     </form>
-    <form action="/users/newUser">
+    <form action="/users/newUser" method="get">
         <button class = "newUser">New User</button>
     </form>
 </body>
