added email attribute and logout buttons

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/admin.css">
 </head>
 <body>
+    <form action="/users/logout" method="get">
+        <button type="submit">Logout</button>
+    </form>
     <h1>Welcome, Admin!</h1>
     <nav>
         <ul>
