--- a/gp/src/main/resources/templates/users/newUser.html
+++ b/gp/src/main/resources/templates/users/newUser.html
@@ -18,6 +18,8 @@
             <option value="teacher">Teacher</option>
             <option value="proctor">Proctor</option>
         </select><br>
+        <label>Email:</label><br>
+        <input type="email" name="email" placeholder="Email"><br>
         <button>Add User</button>
     </form>
 </body>
