--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/proctor.css">
 </head>
 <body>
+    <form action="/users/logout" method="get">
+        <button type="submit">Logout</button>
+    </form>
     <h1>Welcome, Proctor!</h1>
     <nav>
         <ul>
