--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/teacher.css">
 </head>
 <body>
+    <form action="/users/logout" method="get">
+        <button type="submit">Logout</button>
+    </form>
     <h1>Welcome, Teacher!</h1>
     <nav>
         <ul>
