--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -52,7 +52,10 @@
       <form action="/users/logout" method="get">
         <button type="submit" class="btn btn-primary">Logout</button>
       </form>
-      <h1>Welcome, Proctor!</h1>
+      <form action="/users/edit" method="get">
+        <button type="submit" class="btn btn-primary">Edit Profile</button>
+      </form>
+      <h1 th:text="'Welcome, Proctor ' + ${user.username} + '!'"></h1>
       <nav>
         <ul>
           <li><a href="/proctor/dashboard">Dashboard</a></li>
