--- a/gp/src/main/resources/templates/users/login.html
+++ b/gp/src/main/resources/templates/users/login.html
@@ -57,19 +57,44 @@
   <body>
     <div class="container">
       <h1>Login</h1>
-      <form action="/users/login" method="post">
+      <form id ="login" action="/users/login" method="post">
         <label>Username:</label><br />
-        <input type="text" name="username" placeholder="Username" /><br />
+        <input type="text" id="username" name="username" placeholder="Username" /><br />
         <label>Password:</label><br />
-        <input type="password" name="password" placeholder="Password" /><br />
+        <input type="password" id="password" name="password" placeholder="Password" /><br />
+        <div id="message" class="alert alert-danger" style="display: none;"></div>
         <button>Login</button>
       </form>
       <form action="/users/newUser" method="get">
         <button class="newUser">New User</button>
       </form>
     </div>
+<!-- jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- JavaScript code -->
+    <script>
+   $(document).ready(function() {
+    $('#login').submit(function(event) {
+      var name = $('#username').val();
+      var password = $('#password').val();
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      if (!name || !password) {
+        event.preventDefault(); // Prevent form submission
+        showMessage('Please fill out all fields.');
+        return;
+      }
+    });
+
+    function showMessage(message) {
+      var messageElement = $('#message');
+      messageElement.text(message);
+      messageElement.show();
+
+      setTimeout(function() {
+        messageElement.hide();
+      }, 3000);
+    }
+  });
+    </script>
   </body>
 </html>
