--- a/gp/src/main/resources/templates/users/newUser.html
+++ b/gp/src/main/resources/templates/users/newUser.html
@@ -55,24 +55,51 @@
   <body>
     <div class="container">
       <h1>Add User</h1>
-      <form action="/users/add" method="post">
+      <form id="newUser" action="/users/add" method="post">
         <label>Username:</label><br />
-        <input type="text" name="username" placeholder="Username" /><br />
+        <input type="text" id="username" name="username" placeholder="Username" /><br />
         <label>Password:</label><br />
-        <input type="password" name="password" placeholder="Password" /><br />
+        <input type="password" id="password" name="password" placeholder="Password" /><br />
         <label>User Type:</label><br />
-        <select name="userType">
+        <select id="type" name="userType">
           <option value="admin">Admin</option>
           <option value="teacher">Teacher</option>
           <option value="proctor">Proctor</option></select
         ><br />
         <label>Email:</label><br />
-        <input type="email" name="email" placeholder="Email" /><br />
+        <input type="email" id="email" name="email" placeholder="Email" /><br />
+        <div id="message" class="alert alert-danger" style="display: none;"></div>
         <button>Add User</button>
       </form>
     </div>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- JavaScript code -->
+    <script>
+   $(document).ready(function() {
+    $('#newUser').submit(function(event) {
+      var name = $('#username').val();
+      var password = $('#password').val();
+      var type = $('#type').val();
+      var email = $('#email').val();
+      if (!name || !password || !type || !email) {
+        event.preventDefault(); // Prevent form submission
+        showMessage('Please fill out all fields.');
+        return;
+      }
+    });
+
+    function showMessage(message) {
+      var messageElement = $('#message');
+      messageElement.text(message);
+      messageElement.show();
+
+      setTimeout(function() {
+        messageElement.hide();
+      }, 3000);
+    }
+  });
+    </script>
   </body>
 </html>
