Remove non functional buttons

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -58,9 +58,9 @@
       <h1 th:text="'Welcome, Admin ' + ${user.username} + '!'"></h1>
       <nav>
         <ul>
-          <li><a href="/admin/dashboard">Dashboard</a></li>
+          <!-- <li><a href="/admin/dashboard">Dashboard</a></li>
           <li><a href="/admin/users">Manage Users</a></li>
-          <li><a href="/admin/exams">Manage Exams</a></li>
+          <li><a href="/admin/exams">Manage Exams</a></li> -->
         </ul>
       </nav>
       <h2>Admin Dashboard</h2>
