--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -58,9 +58,9 @@
       <h1 th:text="'Welcome, Proctor ' + ${user.username} + '!'"></h1>
       <nav>
         <ul>
-          <li><a href="/proctor/dashboard">Dashboard</a></li>
+          <!-- <li><a href="/proctor/dashboard">Dashboard</a></li>
           <li><a href="/proctor/schedule">My Schedule</a></li>
-          <li><a href="/proctor/exams">Upcoming Exams</a></li>
+          <li><a href="/proctor/exams">Upcoming Exams</a></li> -->
         </ul>
       </nav>
       <h2>Proctor Dashboard</h2>
