--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -58,10 +58,10 @@
       <h1 th:text="'Welcome, Teacher ' + ${user.username} + '!'"></h1>
       <nav>
         <ul>
-          <li><a href="/teacher/dashboard">Dashboard</a></li>
+          <!-- <li><a href="/teacher/dashboard">Dashboard</a></li>
           <li><a href="/teacher/courses">My Courses</a></li>
-          <li><a href="/teacher/exams">My Exams</a></li>
-        </ul>
+          <li><a href="/teacher/exams">My Exams</a></li> -->
+        </ul> 
       </nav>
       <h2>Teacher Dashboard</h2>
       <p>
