--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -49,13 +49,16 @@
   </head>
   <body>
     <div class="container">
-      <form action="/users/logout" method="get">
-        <button type="submit" class="btn btn-primary">Logout</button>
-      </form>
-      <form action="/users/edit" method="get">
-        <button type="submit" class="btn btn-primary">Edit Profile</button>
-      </form>
-      <h1 th:text="'Welcome, Admin ' + ${user.username} + '!'"></h1>
+      <div class="btn-toolbar">
+        <form action="/users/logout" method="get">
+          <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
+        <form action="/users/edit" method="get">
+          <button type="submit" class="btn btn-primary" style="margin-left: 15px">Edit Profile</button>
+        </form>
+      </div>
+      
+      <h1 style="margin-top: 15px;" th:text="'Welcome, Admin ' + ${user.username} + '!'"></h1>
       <nav>
         <ul>
           <!-- <li><a href="/admin/dashboard">Dashboard</a></li>
