added create request for instructor

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -58,7 +58,7 @@
         </form>
       </div>
       
-      <h1 style="margin-top: 15px;" th:text="'Welcome, Admin ' + ${user.username} + '!'"></h1>
+      <h1 style="margin-top: 15px;" th:text="'Welcome, Admin ' + ${user.username}"></h1>
       <nav>
         <ul>
           <!-- <li><a href="/admin/dashboard">Dashboard</a></li>
