--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -91,7 +91,7 @@
       </form>
     </div>
 
-    <h1 style="margin-top: 15px;" th:text="'Welcome, Proctor ' + ${user.username} + '!'"></h1>
+    <h1 style="margin-top: 15px;" th:text="'Welcome, Proctor ' + ${user.username}"></h1>
     <nav>
       <ul>
         <!-- Add relevant links for proctor dashboard -->
