--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -98,7 +98,7 @@
           </div>
           <div class="col-md-4">
             <div class="form-group">
-              <label for="duration">Duration:</label>
+              <label for="duration">Duration (hours):</label>
               <input type="number" id="duration" name="duration" class="form-control" required>
             </div>
           </div>
