Admin Form Set Up

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -94,16 +94,25 @@
         <div class="form-group">
           <div class="row">
             <div class="col-md-4">
-              <label for="firstChoice">Time Slot</label>
-              <input type="datetime-local" id="firstChoice" name="firstChoice" class="form-control" required>
+              <div class="form-group">
+                <label for="course_name">Number of Proctors Assigned:</label>
+                <input type="number" id="num_proctors" name="num_proctors" class="form-control" required>
+              </div>
             </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="course_name">Room Number Assigned:</label>
+                <input type="text" id="roomNum" name="roomNum" class="form-control" required>
+              </div>
+              </div>
+            <div class="col-md-4">
+              <label for="firstChoice">Time Slot</label>
+              <input type="datetime-local" id="timeSlot" name="timeSlot" class="form-control" required>
             </div>
           </div>
-        
           <!-- Submit button -->
           <button type="submit" class="btn btn-primary mt-3">Finalize Exam Slot</button>
-        </form>
-            
+        </form>    
       </p>
     </div>
 
