added instructor requests page for admin

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a href="/admin/dashboard">Dashboard</a></li>
           <li><a href="/admin/users">Manage Users</a></li>
-          <li><a href="/admin/exams">Manage Exams</a></li> 
+          <li><a href="/admin/exams">Manage Exam Requests</a></li> 
         </ul>
       </nav>
       <h2>Admin Dashboard</h2>
