fixed admin request view page and controller

--- a/gp/src/main/resources/templates/users/admin/instructorRequests.html
+++ b/gp/src/main/resources/templates/users/admin/instructorRequests.html
@@ -14,7 +14,7 @@
         <table class="request-table table table-striped">
         <thead>
             <tr>
-            <th>Instructor</th>
+            <!-- <th>Instructor</th> -->
             <th>Course</th>
             <th>Duration</th>
             <th>Section</th>
@@ -23,17 +23,17 @@
             <th>Third Choice</th>
             </tr>
         </thead>
-        <!-- <tbody>
+        <tbody>
             <tr th:each="request: ${requests}">
-                <td th:text="${request.username}"></td>
+                <!-- <td th:text="${request.username}"></td> -->
                 <td th:text="${request.course_name}"></td>
                 <td th:text="${request.duration}"></td>
                 <td th:text="${request.section}"></td>
-                <td th:text="${request.first_choice}"></td>
+                <!-- <td th:text="${request.first_choice}"></td>
                 <td th:text="${request.second_choice}"></td>
-                <td th:text="${request.third_choice}"></td>
+                <td th:text="${request.third_choice}"></td> -->
             </tr>
-        </tbody> -->
+        </tbody>
         </table>
     </div>
 </body>
